# E.C.H.O.-Even-Chaos-Hears-Orders

./: .env.example  .gitignore  BACKGROUND_SERVICE.md  README.md  pyproject.toml  register_autostart.bat  run_background.py  start_background.bat  start_background.sh  test_wake.py  test_wake_30s.py  test_wakeword.py  test_wakeword_only.py
src/echo_assistant/: __init__.py  config.py  logging_config.py  main.py
src/echo_assistant/core/: __init__.py  audio.py  brain.py  router.py  stt.py  tts.py  wakeword.py
src/echo_assistant/runtime/: __init__.py  hotkey_listener.py  loop.py  service.py  wake_listener.py
src/echo_assistant/skills/: __init__.py  media.py  memory.py  notes.py  system_control.py  web_search.py
src/echo_assistant/ui/: __init__.py  cli.py  notify.py  tray.py
