[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echo-assistant"
version = "0.1.0"
description = "Voice-activated AI assistant"
requires-python = ">=3.8"
dependencies = [
    "openai-whisper",
    "pyttsx3",
    "pyaudio",
    "keyboard",
    "python-dotenv",
    "openai",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["src"]
